# openqube-sueldos

./: .gitignore  README.md  README_backend.md  README_frontend.md  package-lock.json  package.json
data/: Orientacion sexual 2021.02.csv  a.txt  b.txt  currency-2018-12.json  currency-2019.01.json  currency-2019.02.json  currency-2020.01.json  currency-2020.02.json  currency-2021.01.json  currency-2021.02.json  currency-2022.01.json  evolution.csv
data/csv/argentina/: 2014.02.csv  2015.01.csv  2016.02.csv  2017.01.csv  2017.02.csv  2018.01.csv  2018.02.csv  2019.01.csv  2019.02.csv  2020.01.csv  2020.02.csv
pipeline/: README.md  data-analysis.ipynb  historical-data-analysis.ipynb  pyproject.toml
public/: index.html
src/: App.css  App.js  index.css
src/components/CTAButton/: index.js  styles.css
src/components/Container/: Styles.css  index.js  styles.css
src/components/Footer/: Styles.css  index.js  styles.css
src/components/Header/: Styles.css  index.js  styles.css
src/components/Landing/: charts.js  data.js  historic-charts.js  index.js  styles.css
src/components/License/: index.js  styles.css
src/components/MainContainer/: index.js  styles.css
src/components/MainTitle/: index.js  styles.css
src/components/Section/: index.js
src/components/Section/Components/: chartsUtils.js
src/components/SectionTabs/: Styles.css  index.js
src/components/SectionTitle/: Styles.css  index.js
src/components/SideNav/: index.js  styles.css
src/components/SocialList/: index.js  styles.css
src/components/Title/: index.js  styles.css
(+19 files in other folders)
