[tool.poetry]
name = "openqube_sueldos"
version = "1.0.0"
description = "data transformation pipeline for openqube/sysarmy salary poll"
authors = ["Pablo Fernandez <fernandezpablo85@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.4"
jupyter = "^1.0.0"
notebook = "^6.1.1"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
